--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "d3-time-format": "^4.1.0",
+    "framer-motion": "^12.23.25",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.3",
     "jspdf": "^2.5.2",
