--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,8 +40,11 @@
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
